@@ -173,6 +173,7 @@ EXPORTS
 	gimp_edit_stroke
 	gimp_ellipse_select
 	gimp_enums_get_type_names
+	gimp_enums_init
 	gimp_equalize
 	gimp_eraser
 	gimp_eraser_default
