@@ -91,11 +91,28 @@ static const gchar *type_names[] =
   "GimpTransformDirection"
 };
 
+static gboolean enums_initialized = FALSE;
+
+/**
+ * gimp_enums_init
+ *
+ * This function makes sure all the enum types are registered
+ * with the GObject type system. This is intended for use by
+ * language bindings that need the symbols early, before gimp_main
+ * is run. It's not necessary for plug-ins to call this directly,
+ * as the normal plug-in initialization code will handle it
+ * implicitly.
+ *
+ * Since: GIMP 2.4
+ **/
 void
-_gimp_enums_init (void)
+gimp_enums_init (void)
 {
   const GimpGetTypeFunc *funcs = get_type_funcs;
   gint                   i;
+
+  if (enums_initialized)
+    return;
 
   for (i = 0; i < G_N_ELEMENTS (get_type_funcs); i++, funcs++)
     {
@@ -103,6 +120,8 @@ _gimp_enums_init (void)
 
       g_type_class_ref (type);
     }
+
+  enums_initialized = TRUE;
 }
 
 /**
