@@ -97,7 +97,7 @@ foreach (sort keys %enums) {
 
 print ENUMFILE <<HEADER;
 
-void           _gimp_enums_init          (void);
+void           gimp_enums_init           (void);
 
 const gchar ** gimp_enums_get_type_names (gint *n_type_names);
 
@@ -161,11 +161,28 @@ print ENUMFILE "\n" unless $first;
 print ENUMFILE <<CODE;
 };
 
+static gboolean enums_initialized = FALSE;
+
+/**
+ * gimp_enums_init
+ *
+ * This function makes sure all the enum types are registered
+ * with the GObject type system. This is intended for use by
+ * language bindings that need the symbols early, before gimp_main
+ * is run. It's not necessary for plug-ins to call this directly,
+ * as the normal plug-in initialization code will handle it
+ * implicitly.
+ *
+ * Since: GIMP 2.4
+ **/
 void
-_gimp_enums_init (void)
+gimp_enums_init (void)
 {
   const GimpGetTypeFunc *funcs = get_type_funcs;
   gint                   i;
+
+  if (enums_initialized)
+    return;
 
   for (i = 0; i < G_N_ELEMENTS (get_type_funcs); i++, funcs++)
     {
@@ -173,6 +190,8 @@ _gimp_enums_init (void)
 
       g_type_class_ref (type);
     }
+
+  enums_initialized = TRUE;
 }
 
 /**
